--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <title>Cranium Breakers(best clan no cap)</title>
+  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Simply made to help get better at the game">
+  <meta name="referrer" content="origin-when-cross-origin">
+  <meta name="theme-color" content="#030303">
+  <meta property="og:image" content="https://cdn.discordapp.com/attachments/809973100828557352/993291983793684611/static1.png">
+</head>
+
+<body>
+	<h1 class="large">Test</h1>
+</body>
