--- a/index.html
+++ b/index.html
@@ -13,4 +13,8 @@
 
 <body>
 	<h1 class="large"><center>Cranium Breakers</center></h1>
+	<button onclick="window.location.href='https://discord.gg/c5KaDpzeeC'">Join us!</button>
+	<br>
+	<iframe src="https://discord.com/widget?id=992965887172825200&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 </body>
+ 
