--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 </head>
 
 <body>
-	<h1 class="large"><center>Cranium Breakers</center></h1>
-	<button onclick="window.location.href='https://discord.gg/c5KaDpzeeC'">Join us!</button>
+	<span class="discord"><button onclick="window.location.href='https://discord.gg/c5KaDpzeeC'">Join us!</button>
 	<br>
 	<iframe src="https://discord.com/widget?id=992965887172825200&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+</span>
+	<h1 class="large"><center>Cranium Breakers</center></h1>
+	<p><center>What is Cranium Breakers? Cranium Breakers is a Dragon Ball Online Generations clan made to help players get good at the game.</center></p>
 </body>
- 
