--- a/index.html
+++ b/index.html
@@ -9,17 +9,34 @@
   <meta name="referrer" content="origin-when-cross-origin">
   <meta name="theme-color" content="#030303">
   <meta property="og:image" content="https://cdn.discordapp.com/attachments/809973100828557352/993291983793684611/static1.png">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 
 <body>
+  <div>
+  <button onclick="document.getElementById('id01').style.display='block'" class="contact-button w3-button w3-white">Contacts</button>
+
+  <div id="id01" class="w3-modal w3-animate-opacity">
+    <div class="w3-modal-content w3-card-4">
+      <header class="w3-container gray"> 
+        <span onclick="document.getElementById('id01').style.display='none'" 
+        class="x w3-large w3-display-topright">&times;</span>
+        <h2>Contacts List</h2>
+      </header>
+      <div class="w3-container">
+        <a href="https://discord.com/users/654510334748655616">underimagine#5721 <img class="discordicon" src="data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' id='Capa_1' x='0px' y='0px' viewBox='0 0 24 24' style='enable-background:new 0 0 24 24;' xml:space='preserve' width='512' height='512'%3E%3Cg%3E%3Cpath d='M20.317,4.37c-1.53-0.702-3.17-1.219-4.885-1.515c-0.031-0.006-0.062,0.009-0.079,0.037 c-0.211,0.375-0.445,0.865-0.608,1.249c-1.845-0.276-3.68-0.276-5.487,0C9.095,3.748,8.852,3.267,8.641,2.892 C8.624,2.864,8.593,2.85,8.562,2.855C6.848,3.15,5.208,3.667,3.677,4.37C3.664,4.375,3.652,4.385,3.645,4.397 c-3.111,4.648-3.964,9.182-3.546,13.66c0.002,0.022,0.014,0.043,0.031,0.056c2.053,1.508,4.041,2.423,5.993,3.029 c0.031,0.01,0.064-0.002,0.084-0.028c0.462-0.63,0.873-1.295,1.226-1.994c0.021-0.041,0.001-0.09-0.042-0.106 c-0.653-0.248-1.274-0.55-1.872-0.892c-0.047-0.028-0.051-0.095-0.008-0.128c0.126-0.094,0.252-0.192,0.372-0.291 c0.022-0.018,0.052-0.022,0.078-0.01c3.928,1.793,8.18,1.793,12.061,0c0.026-0.012,0.056-0.009,0.079,0.01 c0.12,0.099,0.246,0.198,0.373,0.292c0.044,0.032,0.041,0.1-0.007,0.128c-0.598,0.349-1.219,0.645-1.873,0.891 c-0.043,0.016-0.061,0.066-0.041,0.107c0.36,0.698,0.772,1.363,1.225,1.993c0.019,0.027,0.053,0.038,0.084,0.029 c1.961-0.607,3.95-1.522,6.002-3.029c0.018-0.013,0.029-0.033,0.031-0.055c0.5-5.177-0.838-9.674-3.548-13.66 C20.342,4.385,20.33,4.375,20.317,4.37z M8.02,15.331c-1.183,0-2.157-1.086-2.157-2.419s0.955-2.419,2.157-2.419 c1.211,0,2.176,1.095,2.157,2.419C10.177,14.246,9.221,15.331,8.02,15.331z M15.995,15.331c-1.182,0-2.157-1.086-2.157-2.419 s0.955-2.419,2.157-2.419c1.211,0,2.176,1.095,2.157,2.419C18.152,14.246,17.206,15.331,15.995,15.331z'/%3E%3C/g%3E%3C/svg%3E" alt=""></a>
+      </div>
+    </div>
+  </div>
+</div>
 	<span class="main2">
-	<span class="main"><button onclick="window.location.href='https://discord.gg/c5KaDpzeeC'">Join us!</button>
+	<span class="main"><button onclick="window.location.href='https://discord.gg/c5KaDpzeeC'" class="button">Join us!</button>
 	<br>
 	<iframe src="https://discord.com/widget?id=992965887172825200&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 </span>
 <span class="main">
 	<h1 class="large"><center>Cranium Breakers</center></h1>
-	<p><center>What is Cranium Breakers? Cranium Breakers is a Dragon Ball Online Generations clan made to help players get good at the game.</center></p>
+	<p><center>What is Cranium Breakers? Cranium Breakers is a Dragon Ball Online Generations clan made to help players get good at the game. This clan was made by <a href="https://www.roblox.com/users/1743381155/profile">jxk2ed</a><br><br><br><br><br><br><br><br><br><br><br><br></center></p>
 </span>
 </span>
 </body>
