Added Roblox SVG

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </span>
 <span class="main">
 	<h1 class="large"><center>Cranium Breakers</center></h1>
-	<p><center>What is Cranium Breakers? Cranium Breakers is a Dragon Ball Online Generations clan made to help players get good at the game. This clan was made by <a href="https://www.roblox.com/users/1743381155/profile">jxk2ed</a><br><br><br><br><br><br><br><br><br><br><br><br></center></p>
+	<p><center>What is Cranium Breakers? Cranium Breakers is a Dragon Ball Online Generations clan made to help players get good at the game. This clan was made by <a href="https://www.roblox.com/users/1743381155/profile">jxk2ed<img class="rblx-img" src='https://images.rbxcdn.com/8e7879f99cfa7cc3b1fce74f8191be03.svg' width='30' height='30' alt=''/></a><br><br><br><br><br><br><br><br><br><br><br><br></center></p>
 </span>
 </span>
 </body>
