--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@ def on_press(key):<br>
 with keyboard.Listener(on_press=on_press) as listener:<br>
     listener.join()<br>
   </div>
-  <button onclick="window.location.href='https://cdn.discordapp.com/attachments/992970297982595133/992970564996177930/macro.py'" class="download">Download</button>
+  <button onclick="window.location.href='https://cdn.discordapp.com/attachments/992970297982595133/992970564996177930/macro.py'" class="fa-solid fa-download"> Download</button>
 </div>
 <script src="w3codecolor.js"></script>
-
+<script src="fa.js"></script>
 <script>
 w3CodeColor();
 </script>
