--- a/index.html
+++ b/index.html
@@ -33,30 +33,12 @@
   <span class="main2">
   <span class="main"><button onclick="window.location.href='https://discord.gg/c5KaDpzeeC'" class="button">Join us!</button>
   <br>
-  <iframe src="https://discord.com/widget?id=992965887172825200&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 </span>
 <span class="main">
   <h1 class="large"><center>Cranium Breakers</center></h1>
-  <p><center>What is Cranium Breakers? Cranium Breakers is a Dragon Ball Online Generations clan made to help players get good at the game. This clan was made by <a href="https://www.roblox.com/users/1743381155/profile">jxk2ed<img class="rblx-img" src='https://images.rbxcdn.com/8e7879f99cfa7cc3b1fce74f8191be03.svg' width='30' height='30' alt=''/></a><br><br><br><br><br><br><br><br><br><br><br><br></center></p>
+  <p><center>What is Cranium Breakers? Cranium Breakers is a Dragon Ball Online Generations clan made to help players get good at the game. This clan was made by <a href="https://www.roblox.com/users/1743381155/profile">jxk2ed<img class="rblx-img" src='https://images.rbxcdn.com/8e7879f99cfa7cc3b1fce74f8191be03.svg' width='30' height='30' alt=''/></a></center></p>
 </span>
 </span>
-<div class="w3-panel w3-card w3-dark-grey"> 
-  <h5>macro.py, in order to avoid being absorbed</h5>
-
-  <div class="w3-code pythonHigh notranslate">
-import pyautogui<br>
-pyautogui.FAILSAFE = False<br>
-from pynput import keyboard<br>
-
-def on_press(key):<br>
-    if key == keyboard.KeyCode(char='`') or key == keyboard.KeyCode(char='~'):<br>
-        pyautogui.write('ffffffffffffffffffffffffffffff', interval=0)<br>
-
-with keyboard.Listener(on_press=on_press) as listener:<br>
-    listener.join()<br>
-  </div>
-  <button onclick="window.location.href='https://cdn.discordapp.com/attachments/992970297982595133/992970564996177930/macro.py'" class="fa-solid fa-download"> Download</button>
-</div>
 <script src="w3codecolor.js"></script>
 <script src="fa.js"></script>
 <script>
